--- a/materyaller.html
+++ b/materyaller.html
@@ -59,6 +59,15 @@
 		<div class="col-md-8">
 			
 			HAYIR Meclisleri çalışmalarında kullanılmak üzere derlediğimiz materyallere aşağıdan ulaşabilirsiniz. 
+			<br><br>
+			<h3>10 cm Çıkartma (PDF)</h3>
+			<a href="materyaller/10x10cm_cikartma.pdf" target="_blank"><img src="materyaller/10x10cm_cikartma.png" width="150"></a>
+			<br><br>
+			<h3>HAYIR Bildirisi (PDF)</h3>
+			<a href="materyaller/bildiri_baski.pdf" target="_blank"><img src="materyaller/bildiri_baski.png" width="300"></a>
+			<br><br>
+			<h3>BAŞKANLIĞIN Faturası (PDF)</h3>
+			<a href="materyaller/fatura_hayir_baski.pdf" target="_blank"><img src="materyaller/fatura_hayir_baski.png" width="300"></a>
 			
 		</div>
     </div>
