Materyaller img alt

--- a/materyaller.html
+++ b/materyaller.html
@@ -61,15 +61,15 @@
 			HAYIR Meclisleri çalışmalarında kullanılmak üzere derlediğimiz materyallere aşağıdan ulaşabilirsiniz. 
 			<br><br>
 			<h3>10 cm Çıkartma (PDF)</h3>
-			<a href="materyaller/10x10cm_cikartma.pdf" target="_blank"><img src="materyaller/10x10cm_cikartma.png" width="150"></a>
+			<a href="materyaller/10x10cm_cikartma.pdf" target="_blank"><img src="materyaller/10x10cm_cikartma.png" width="150" alt="10 cm Çıkartma"></a>
 			<br><br>
 			<h3>HAYIR Bildirisi (PDF)</h3>
-			<a href="materyaller/bildiri_baski.pdf" target="_blank"><img src="materyaller/bildiri_baski_arka_Page_1.png" width="300"></a>
-			<a href="materyaller/bildiri_baski.pdf" target="_blank"><img src="materyaller/bildiri_baski_arka_Page_2.png" width="300"></a>
+			<a href="materyaller/bildiri_baski.pdf" target="_blank"><img src="materyaller/bildiri_baski_arka_Page_1.png" width="300" alt="HAYIR Bildirisi"></a>
+			<a href="materyaller/bildiri_baski.pdf" target="_blank"><img src="materyaller/bildiri_baski_arka_Page_2.png" width="300" alt="HAYIR Bildirisi"></a>
 			<br><br>
 			<h3>BAŞKANLIĞIN Faturası (PDF)</h3>
-			<a href="materyaller/fatura_hayir_baski.pdf" target="_blank"><img src="materyaller/fatura_hayir_baski_Page_1.png" width="300"></a>
-			<a href="materyaller/fatura_hayir_baski.pdf" target="_blank"><img src="materyaller/fatura_hayir_baski_Page_2.png" width="300"></a>
+			<a href="materyaller/fatura_hayir_baski.pdf" target="_blank"><img src="materyaller/fatura_hayir_baski_Page_1.png" width="300" alt="BAŞKANLIĞIN Faturası"></a>
+			<a href="materyaller/fatura_hayir_baski.pdf" target="_blank"><img src="materyaller/fatura_hayir_baski_Page_2.png" width="300" alt="BAŞKANLIĞIN Faturası"></a>
 			<br><br><br><br>
 		</div>
     </div>
