iletişim email adresi.

--- a/iletisim.html
+++ b/iletisim.html
@@ -61,7 +61,7 @@
 			HAYIR çalışmalarına katılmak istiyorsanız, bölgenizde yer alan çalışmaların sayfalarındaki iletişim bilgilerini kullanmanızı öneririz. 
 			<br><br>
 			Bu sayfalar ile ilgili paylaşmak istediğiniz ihtiyaçlarınız için de 
-			hayirmeclisleri@gmail.com adresinden bizimle iletişim kurabilirsiniz.
+			<a href="mailto:iletisim@tercihhayir.org" target="_blank">iletisim@tercihhayir.org</a> adresinden bizimle iletişim kurabilirsiniz.
 			
 		</div>
     </div>
