--- a/iletisim.html
+++ b/iletisim.html
@@ -31,6 +31,9 @@
           		<li class="nav-item">
             		<a class="nav-link" href="index.html">Anasayfa <span class="sr-only">(current)</span></a>
           		</li>
+          		<li class="nav-item">
+					<a class="nav-link" href="takvim.html">Takvim</a>
+				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="materyaller.html">Materyaller</a>
 				</li>
