--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -3,28 +3,26 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="HAYIR Meclislerinin derlendiği merkezi sayfa.">
+    <meta name="description" content="HAYIR Meclislerinin derlendiği merkezi sayfa. Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
     <meta name="author" content="HAYIR Meclisleri">
+    <meta property="og:title" content="HAYIR Meclisleri http://tercihhayir.org">
+	<meta property="og:image" content="http://tercihhayir.org/img/hayirust.png">
+	<meta property="og:description" content="HAYIR Meclislerinin derlendiği merkezi sayfa - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
     <link rel="icon" href="favicon.ico">
-
-    <title>HAYIR Meclisleri</title>
-	
-	<!-- Bootstrap core CSS -->
+    <title>HAYIR Meclisleri - Hakkımızda - http://tercihhayir.org</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
     <link href="css/custom.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
-	
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-    
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+   	<script src="js/angular-locale_tr-tr.js"></script>
+   	<script src="js/meclisApp.js"></script>
 </head>
 <body ng-controller="meclisCtrl">
 	<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
     	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         	<span class="navbar-toggler-icon"></span>
       	</button>
-      	<a class="navbar-brand" href="#">HAYIR Meclisleri</a>
+      	<a class="navbar-brand" href="index.html">HAYIR Meclisleri</a>
 
 		<div class="collapse navbar-collapse" id="navbarsExampleDefault">
         	<ul class="navbar-nav mr-auto">
@@ -46,21 +44,19 @@
 			</ul>
 		</div>
 	</nav>
-
    
 <div class="container">
 	<div class="row">
     	<div class="col-md-4">
-        	<h2>
-        		<img src="img/hayirlogo.png" alt="HAYIR Meclisleri">
-        	</h2>
+        	<h1>
+					<a class="navbar-brand" href="index.html"><img src="img/hayirlogo.png" alt="HAYIR Meclisleri"></a>
+				</h1>
           	<p>Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz. 
           	<br>
           	Sizleri de bireysel katılımla işleyen ve yerel inisiyatiflerle örgütlenen HAYIR meclislerine katılmaya davet ediyoruz.
 			</p>
 		</div>
-		<div class="col-md-8">
-			
+		<div class="col-md-8">			
 			Cumhuriyet tarihinden bile köklü olan ve kesintilerle de olsa 140 yıldır varlığını sürdüren parlamenter sistemimiz, cumhurbaşkanının tek bir kararıyla kaldırılabilecek bir oyuncağa dönüştürülme tehlikesiyle karşı karşıya. İyi kötü işleyen tüm denetim mekanizmaları yine aynı cumhurbaşkanı tarafından atanacak kişilerce oluşturulacak ve tarafsızlık vasfını yitirme tehlikesi altında. Eğer yasa kabul edilirse bakanlar kurulunun ve meclisin neredeyse hiçbir işlevi kalmayacak!
 <br><br>
 Bu manzarayı gören, bundan rahatsızlık duyan ve HAYIR diyen yurttaşlar olarak harekete geçiyoruz. Bulunduğumuz her yerde HAYIR'ın sesini yükseltmeyi, yerel inisiyatifler ve meclisler inşa etmeyi amaçlıyoruz. Bu meclisleri tek ve güçlü bir HAYIR kampanyası etrafında örgütlemeyi hedefliyoruz. 
@@ -71,7 +67,6 @@ Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyase
 		</div>
     </div>
 </div><!-- /.container -->
-
 
 
     <!-- Bootstrap core JavaScript
