Sosyal medya paylaşım araçları eklendi

--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -89,6 +89,8 @@ Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyase
   ga('create', 'UA-3516158-34', 'auto');
   ga('send', 'pageview');
 </script>
+
+   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58ab92810ac4c5a0"></script> 
     
     
   </body>
