--- a/iletisim.html
+++ b/iletisim.html
@@ -80,6 +80,7 @@
 	  ga('send', 'pageview');
 	</script>
 	
+	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58ab92810ac4c5a0"></script> 
     
   </body>
 </html>
