--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         	<span class="navbar-toggler-icon"></span>
       	</button>
-      	<a class="navbar-brand" href="index.html">HAYIR Meclisleri</a>
+      	<h1 class="gizle hidden hidden-xs-up">HAYIR Meclisleri - http://tercihhayir.org</h1>
+      	<a class="navbar-brand" href="index.html">HAYIR Meclisleri</a> 
 
 		<div class="collapse navbar-collapse" id="navbarDefault">
         	<ul class="navbar-nav mr-auto">
