--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -8,6 +8,13 @@
     <meta property="og:title" content="HAYIR Meclisleri http://tercihhayir.org">
 	<meta property="og:image" content="http://tercihhayir.org/img/hayirust.png">
 	<meta property="og:description" content="HAYIR Meclislerinin derlendiği merkezi sayfa - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
+	<meta property="og:url" content="http://tercihhayir.org">
+    <meta property="og:locale" content="tr_TR">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta property="og:site_name" content="HAYIR Meclisleri">
+    <meta name="twitter:card" content="HAYIR Meclisleri http://tercihhayir.org">
+	<meta name="twitter:site" content="@hayirkadikoy">
+	<meta name="twitter:creator" content="@hayirkadikoy">
     <link rel="icon" href="favicon.ico">
     <title>HAYIR Meclisleri - Hakkımızda - http://tercihhayir.org</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
