--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta property="og:locale" content="tr_TR">
     <meta property="og:locale:alternate" content="en_US">
     <meta property="og:site_name" content="HAYIR Meclisleri">
+    <meta name="twitter:title" content="HAYIR Meclisleri http://tercihhayir.org">
+    <meta name="twitter:description" content="HAYIR Meclislerinin derlendiği merkezi sayfa - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
     <meta name="twitter:card" content="HAYIR Meclisleri http://tercihhayir.org">
 	<meta name="twitter:site" content="@hayirkadikoy">
 	<meta name="twitter:creator" content="@hayirkadikoy">
