--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 			</div>
 			<div class="col-md-8">			
 				<span data-ng-repeat="eleman in meclisler | orderBy: 'meclis' :false:localeSensitiveComparator " data-ng-if="eleman.status!=='Yakında'">
-				<a data-ng-href="{{eleman.fblink}}" target="_blank"><img data-ng-src="{{eleman.logo}}" data-ng-alt="{{eleman.meclis}}" class="imgbolge img-fluid rounded"></a>
+				<a data-ng-href="{{eleman.fblink}}" target="_blank"><img data-ng-src="{{eleman.logo}}" alt="{{eleman.meclis}}" class="imgbolge img-fluid rounded"></a>
 				</span>
 				<br><br>
 				<h3>YAKINDA</h3>
 				<br>			
 				<span data-ng-repeat="eleman in meclisler | orderBy: 'meclis' " data-ng-if="eleman.status=='Yakında'">
-				<img data-ng-src="{{eleman.logo}}" data-ng-alt="{{eleman.meclis}}" class="imgbolge img-fluid rounded">
+				<img data-ng-src="{{eleman.logo}}" alt="{{eleman.meclis}}" class="imgbolge img-fluid rounded">
 				</span>
 				
 				<div class="gizle hidden hidden-xs-up">HAYIR, hayır, hayir, meclis, meclisleri, seçim, seçmen, sandık, sandik, parti, oy, oylama, referandum, gazete, haber, haberler, election, Türkiye, Turkey, protest, vote, voting, topluluk, grup, gruplar, CHP, HDP, MHP, AKP, AK Parti, Recep, Tayyip, Erdoğan, Selehattin, Demirtaş, Kemal, Kılıçdaroğlu, Deniz, Baykal, Devlet, Bahçeli, İstanbul, Ankara, İzmir, muhalefet, halk, halkçı, toplum, toplumsal, NO 
