--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <title>HAYIR Meclisleri - http://tercihhayir.org</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Exo+2|Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
+ 	<link rel=”canonical” href=”http://tercihhayir.org”>
   	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
    	<script src="js/angular-locale_tr-tr.js"></script>
    	<script src="js/meclisApp.js"></script>
