--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -3,24 +3,28 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="HAYIR Meclislerinin derlendiği merkezi sayfa. Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
+    <meta name="description" content="HAYIR Meclisleri - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
     <meta name="author" content="HAYIR Meclisleri">
     <meta property="og:title" content="HAYIR Meclisleri http://tercihhayir.org">
 	<meta property="og:image" content="http://tercihhayir.org/img/hayirust.png">
-	<meta property="og:description" content="HAYIR Meclislerinin derlendiği merkezi sayfa - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
+	<meta property="og:description" content="HAYIR Meclisleri - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
 	<meta property="og:url" content="http://tercihhayir.org">
     <meta property="og:locale" content="tr_TR">
     <meta property="og:locale:alternate" content="en_US">
     <meta property="og:site_name" content="HAYIR Meclisleri">
+    <meta name="twitter:title" content="HAYIR Meclisleri http://tercihhayir.org">
+    <meta name="twitter:description" content="HAYIR Meclisleri - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
     <meta name="twitter:card" content="HAYIR Meclisleri http://tercihhayir.org">
+    <meta name="twitter:image" content="http://tercihhayir.org/img/hayirust.png">
 	<meta name="twitter:site" content="@hayirkadikoy">
 	<meta name="twitter:creator" content="@hayirkadikoy">
     <link rel="icon" href="favicon.ico">
     <title>HAYIR Meclisleri - Hakkımızda - http://tercihhayir.org</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
+ 	<link rel=”canonical” href=”http://tercihhayir.org”>
+  	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
    	<script src="js/angular-locale_tr-tr.js"></script>
    	<script src="js/meclisApp.js"></script>
 </head>
