--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="HAYIR Meclislerinin derlendiği merkezi sayfa. Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
+    <meta name="description" content="HAYIR Meclisleri - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
     <meta name="author" content="HAYIR Meclisleri">
     <meta property="og:title" content="HAYIR Meclisleri http://tercihhayir.org">
 	<meta property="og:image" content="http://tercihhayir.org/img/hayirust.png">
-	<meta property="og:description" content="HAYIR Meclislerinin derlendiği merkezi sayfa - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
+	<meta property="og:description" content="HAYIR Meclisleri - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
 	<meta property="og:url" content="http://tercihhayir.org">
     <meta property="og:locale" content="tr_TR">
     <meta property="og:locale:alternate" content="en_US">
     <meta property="og:site_name" content="HAYIR Meclisleri">
     <meta name="twitter:title" content="HAYIR Meclisleri http://tercihhayir.org">
-    <meta name="twitter:description" content="HAYIR Meclislerinin derlendiği merkezi sayfa - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
+    <meta name="twitter:description" content="HAYIR Meclisleri - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
     <meta name="twitter:card" content="HAYIR Meclisleri http://tercihhayir.org">
     <meta name="twitter:image" content="http://tercihhayir.org/img/hayirust.png">
 	<meta name="twitter:site" content="@hayirkadikoy">
