Çekmeköy + Dudullu + Takvim

--- a/takvim.html
+++ b/takvim.html
@@ -70,7 +70,7 @@
 		<div class="col-md-8">
 			
 			<h3>HAYIR'lı Buluşmalar Takvimi</h3>
-			<img src="img/hayirtakvim20170203.jpg" alt="HAYIR Meclis Takvimi" class="img-fluid rounded">
+			<img src="img/takvim2.jpg" alt="HAYIR Meclis Takvimi" class="img-fluid rounded">
 			<br><br>
 			<br><br>
 			
