-materyallere stensil eklendi (düzeltme)

--- a/materyaller.html
+++ b/materyaller.html
@@ -83,9 +83,9 @@
 			<a href="materyaller/fatura_hayir_baski.pdf" target="_blank"><img src="materyaller/fatura_hayir_baski_Page_2.png" width="300" alt="BAŞKANLIĞIN Faturası"></a>
 			<br><br>
 			<h3>A3 Stensıl</h3>
-			<a href="materyaller/tercih_hayir.jpg" target="_blank"><img src="materyaller/tercih_hayir.jpg" width="300" alt="HAYIR Bildirisi"></a>
-			<a href="materyaller/hayir_hepimiz_icin.jpg" target="_blank"><img src="materyaller/hayir_hepimiz_icin.jpg" width="300" alt="HAYIR Bildirisi"></a>
-			<a href="materyaller/sandiga_git.jpg" target="_blank"><img src="materyaller/sandiga_git.jpg" width="300" alt="HAYIR Bildirisi"></a>
+			<a href="materyaller/tercih_hayir.jpg" target="_blank"><img src="materyaller/tercih_hayir.jpg" width="300" alt="tercihHAYIR.org"></a>
+			<a href="materyaller/hayir_hepimiz_icin.jpg" target="_blank"><img src="materyaller/hayir_hepimiz_icin.jpg" width="300" alt="Evet bir kişi HAYIR hepimiz için!"></a>
+			<a href="materyaller/sandiga_git.jpg" target="_blank"><img src="materyaller/sandiga_git.jpg" width="300" alt="Sandığa gir HAYIR de İradeni teslim etme!"></a>
 			<br><br>
 			<br><br><br><br>
 		</div>
