--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -6,7 +6,7 @@
     <meta name="description" content="HAYIR Meclisleri - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
     <meta name="author" content="HAYIR Meclisleri">
     <meta property="og:title" content="HAYIR Meclisleri http://tercihhayir.org">
-	<meta property="og:image" content="http://tercihhayir.org/img/hayirust.png">
+	<meta property="og:image" content="http://tercihhayir.org/img/hayirmeclisleri.png">
 	<meta property="og:description" content="HAYIR Meclisleri - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
 	<meta property="og:url" content="http://tercihhayir.org">
     <meta property="og:locale" content="tr_TR">
@@ -15,7 +15,7 @@
     <meta name="twitter:title" content="HAYIR Meclisleri http://tercihhayir.org">
     <meta name="twitter:description" content="HAYIR Meclisleri - Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz.">
     <meta name="twitter:card" content="HAYIR Meclisleri http://tercihhayir.org">
-    <meta name="twitter:image" content="http://tercihhayir.org/img/hayirust.png">
+    <meta name="twitter:image" content="http://tercihhayir.org/img/hayirmeclisleri.png">
 	<meta name="twitter:site" content="@hayirkadikoy">
 	<meta name="twitter:creator" content="@hayirkadikoy">
     <link rel="icon" href="favicon.ico">
