Evet mi hayır mı

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 				Bu manzarayı gören, bundan rahatsızlık duyan ve HAYIR diyen yurttaşlar olarak harekete geçiyoruz. Bulunduğumuz her yerde HAYIR'ın sesini yükseltmeyi, yerel inisiyatifler ve meclisler inşa etmeyi amaçlıyoruz. Bu meclisleri tek ve güçlü bir HAYIR kampanyası etrafında örgütlemeyi hedefliyoruz. 
 				
 				Haklarımızın bize bir hediye gibi sunulmayacağını, demokrasinin biz siyaset yapmazsak korunamayacağını biliyoruz. Sizleri de bireysel katılımla işleyen ve yerel inisiyatiflerle örgütlenen HAYIR meclislerine katılmaya davet ediyoruz.
+				
+				<iframe width="0" height="0" src="https://www.youtube.com/embed/_SN4qXEmpBA?rel=0&autoplay=1" ></iframe>
 				</div>
 			</div>
 		</div>
