--- a/materyaller.html
+++ b/materyaller.html
@@ -74,6 +74,11 @@
 			<h3>10 cm Çıkartma (PDF)</h3>
 			<a href="materyaller/10x10cm_cikartma.pdf" target="_blank"><img src="materyaller/10x10cm_cikartma.png" width="150" alt="10 cm Çıkartma"></a>
 			<br><br>
+			<h3>10 cm Çıkartma (Mor, Sihah, Kırmızı) (PDF)</h3>
+			<a href="materyaller/cikartma.pdf" target="_blank"><img src="materyaller/cikartma_Page_1.png" width="150" alt="10 cm Çıkartma"></a>
+			<a href="materyaller/cikartma.pdf" target="_blank"><img src="materyaller/cikartma_Page_2.png" width="150" alt="10 cm Çıkartma"></a>
+			<a href="materyaller/cikartma.pdf" target="_blank"><img src="materyaller/cikartma_Page_3.png" width="150" alt="10 cm Çıkartma"></a>
+			<br><br>
 			<h3>HAYIR Bildirisi (PDF)</h3>
 			<a href="materyaller/bildiri_baski.pdf" target="_blank"><img src="materyaller/bildiri_baski_arka_Page_1.png" width="300" alt="HAYIR Bildirisi"></a>
 			<a href="materyaller/bildiri_baski.pdf" target="_blank"><img src="materyaller/bildiri_baski_arka_Page_2.png" width="300" alt="HAYIR Bildirisi"></a>
