--- a/takvim.html
+++ b/takvim.html
@@ -70,7 +70,7 @@
 		<div class="col-md-8">
 			
 			<h3>HAYIR'lı Buluşmalar Takvimi</h3>
-			<img src="img/takvimmart01.jpg" alt="HAYIR Meclis Takvimi" class="img-fluid rounded">
+			<a href="img/takvimmart01.jpg" target="_blank"><img src="img/takvimmart01.jpg" alt="HAYIR Meclis Takvimi" class="img-fluid rounded"></a>
 			<br><br>
 			<br><br>
 			
