--- a/materyaller.html
+++ b/materyaller.html
@@ -83,6 +83,18 @@
 			<a href="materyaller/bildiri_baski.pdf" target="_blank"><img src="materyaller/bildiri_baski_arka_Page_1.png" width="300" alt="HAYIR Bildirisi"></a>
 			<a href="materyaller/bildiri_baski.pdf" target="_blank"><img src="materyaller/bildiri_baski_arka_Page_2.png" width="300" alt="HAYIR Bildirisi"></a>
 			<br><br>
+			<h3>HAYIR Bildirisi v2 (PDF)</h3>
+			<a href="materyaller/bildiri_v2_baski.pdf" target="_blank"><img src="materyaller/bildiri_v2_baski_arka_Page_1.png" width="300" alt="HAYIR Bildirisi v2"></a>
+			<a href="materyaller/bildiri_v2_baski.pdf" target="_blank"><img src="materyaller/bildiri_v2_baski_arka_Page_2.png" width="300" alt="HAYIR Bildirisi v2"></a>
+			<br><br>
+			<h3>Meclislere Katıl (PDF)</h3>
+			<a href="materyaller/meclislere_katil.pdf" target="_blank"><img src="materyaller/meclislere_katil_Page_1.png" width="300" alt="Meclislere Katıl"></a>
+			<a href="materyaller/meclislere_katil.pdf" target="_blank"><img src="materyaller/meclislere_katil_Page_2.png" width="300" alt="Meclislere Katıl"></a>
+			<br><br>
+			<h3>Broşür (PDF)</h3>
+			<a href="materyaller/brosur.pdf" target="_blank"><img src="materyaller/brosur_Page_1.png" width="300" alt="Broşür"></a>
+			<a href="materyaller/brosur.pdf" target="_blank"><img src="materyaller/brosur_Page_2.png" width="300" alt="Broşür"></a>
+			<br><br>
 			<h3>BAŞKANLIĞIN Faturası (PDF)</h3>
 			<a href="materyaller/fatura_hayir_baski.pdf" target="_blank"><img src="materyaller/fatura_hayir_baski_Page_1.png" width="300" alt="BAŞKANLIĞIN Faturası"></a>
 			<a href="materyaller/fatura_hayir_baski.pdf" target="_blank"><img src="materyaller/fatura_hayir_baski_Page_2.png" width="300" alt="BAŞKANLIĞIN Faturası"></a>
@@ -94,6 +106,10 @@
 			<br><br>
 			<a href="materyaller/sandiga_git.jpg" target="_blank"><img src="materyaller/sandiga_git.jpg" width="300" alt="Sandığa gir HAYIR de İradeni teslim etme!"></a>
 			<br><br><br><br>
+			<h3>Rozet (PDF)</h3>
+			<a href="materyaller/rozet.pdf" target="_blank"><img src="materyaller/rozet.png" width="300" alt="Rozet"></a>
+			<a href="materyaller/rozet_cokrenkli.pdf" target="_blank"><img src="materyaller/rozet_cok_renkli.png" width="300" alt="Rozet Çok Renkli"></a>
+			<br><br>
 		</div>
     </div>
 </div><!-- /.container -->
