-üniversite bölümü eklendi -iletişim sayfası güncellendi

--- a/iletisim.html
+++ b/iletisim.html
@@ -70,8 +70,10 @@
 			<div class="col-md-8">
 				HAYIR çalışmalarına katılmak istiyorsanız, bölgenizde yer alan çalışmaların sayfalarındaki iletişim bilgilerini kullanmanızı öneririz. 
 				<br><br>
-				Bu sayfalar ile ilgili paylaşmak istediğiniz ihtiyaçlarınız için de 
-				<a href="mailto:iletisim@tercihhayir.org" target="_blank">iletisim@tercihhayir.org</a> adresinden bizimle iletişim kurabilirsiniz.
+				Lütfen iletişime geçmek için yakın olduğunuz yerel meclislerin Facebook sayfalarına mesaj gönderiniz.
+				<br>
+				Yerelinizde meclis çalışması yoksa yine yakın olduğunuz büyük kent merkezlerine ait hesaplarla iletişime geçebilirsiniz.
+				<br><br>
 			</div>
 		</div>
 	</div>
