--- a/materyaller.html
+++ b/materyaller.html
@@ -84,8 +84,8 @@
 			<a href="materyaller/bildiri_baski.pdf" target="_blank"><img src="materyaller/bildiri_baski_arka_Page_2.png" width="300" alt="HAYIR Bildirisi"></a>
 			<br><br>
 			<h3>HAYIR Bildirisi v2 (PDF)</h3>
-			<a href="materyaller/bildiri_v2_baski.pdf" target="_blank"><img src="materyaller/bildiri_v2_baski_arka_Page_1.png" width="300" alt="HAYIR Bildirisi v2"></a>
-			<a href="materyaller/bildiri_v2_baski.pdf" target="_blank"><img src="materyaller/bildiri_v2_baski_arka_Page_2.png" width="300" alt="HAYIR Bildirisi v2"></a>
+			<a href="materyaller/bildiri_v2.pdf" target="_blank"><img src="materyaller/bildiri_v2_arka_Page_1.png" width="300" alt="HAYIR Bildirisi v2"></a>
+			<a href="materyaller/bildiri_v2.pdf" target="_blank"><img src="materyaller/bildiri_v2_arka_Page_2.png" width="300" alt="HAYIR Bildirisi v2"></a>
 			<br><br>
 			<h3>Meclislere Katıl (PDF)</h3>
 			<a href="materyaller/meclislere_katil.pdf" target="_blank"><img src="materyaller/meclislere_katil_Page_1.png" width="300" alt="Meclislere Katıl"></a>
@@ -109,6 +109,10 @@
 			<h3>Rozet (PDF)</h3>
 			<a href="materyaller/rozet.pdf" target="_blank"><img src="materyaller/rozet.png" width="150" alt="Rozet"></a>
 			<a href="materyaller/rozet_cokrenkli.pdf" target="_blank"><img src="materyaller/rozet_cok_renkli.png" width="150" alt="Rozet Çok Renkli"></a>
+			<br><br>
+			<h3>İnfo Kart(9x5 cm)</h3>
+			<a href="materyaller/infokart_baski.pdf" target="_blank"><img src="materyaller/infokart_baski_arka_Page_1.png" width="300" alt="İnfo Kart (9x5 cm)"></a>
+			<a href="materyaller/infokart_baski.pdf" target="_blank"><img src="materyaller/infokart_baski_arka_Page_2.png" width="300" alt="İnfo Kart (9x5 cm)"></a>
 			<br><br>
 		</div>
     </div>
